added common query functions and seperated type declarations
